[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameEngine/TrackingArea.gd" type="Script" id=1]

[node name="TrackingArea" type="Area2D"]
script = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_TrackingArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TrackingArea_area_exited"]
